src/objects/zqu__ProductRatePlanCharge__c.object
<CustomObject>
    <description>The Charges associated with a Rate Plan.</description>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Storefront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellingCutoffDate__c</fullName>
        <label>Selling Cutoff Date</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storefront_Formula__c</fullName>
        <formula>VALUE( Storefront__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Storefront_Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storefront__c</fullName>
        <description>For Parent/Child CPQ</description>
        <label>Storefront</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZProduct_Name__c</fullName>
        <formula>zqu__ProductRatePlan__r.zqu__ZProduct__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZProduct Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__AccountingCode2__c</fullName>
        <description>The accounting code for the charge. Accounting codes group transactions that contain similar accounting attributes.</description>
        <label>Accounting Code</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__AccountingCode__c</fullName>
        <label>Accounting Code (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_One_Time_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To One Time Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Recurring_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Recurring Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Usage_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__BillCycleDay__c</fullName>
        <description>Sets the bill cycle day (BCD) for the charge. The BCD determines which day of the month customer is billed. The BCD value in the account can override the BCD in this object.</description>
        <label>Bill Cycle Day</label>
        <picklist>
            <picklistValues>
                <fullName>Auto-set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21st of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22nd of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23rd of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29th of the month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__BillCycleType__c</fullName>
        <description>Specifies how to determine the billing day for the charge. If you want to use the BillCycleDay field, then set this field value to SpecificDayofMonth.</description>
        <label>Bill Cycle Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default From Customer Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific Day of Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Start Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Trigger Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific Day of Week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__BillingPeriodAlignment__c</fullName>
        <description>Aligns charges within the same subscription if multiple charges begin on different dates.</description>
        <label>Billing Period Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>Align To Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Align To Subscription Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Align To Term Start</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__BillingTiming__c</fullName>
        <label>Billing Timing</label>
        <picklist>
            <picklistValues>
                <fullName>In Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Arrears</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Catalog_Sync_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product link to catalog sync history</description>
        <inlineHelpText>Product link to catalog sync history</inlineHelpText>
        <label>Catalog Sync History</label>
        <referenceTo>zqu__Catalog_Sync_History__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charges</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__DefaultQuantity__c</fullName>
        <description>The Default Quantity of the Rate Plan Charge.</description>
        <inlineHelpText>The Default Quantity of the Rate Plan Charge.</inlineHelpText>
        <label>Default Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeferredRevenueAccount__c</fullName>
        <description>The name of the deferred revenue account for this charge.</description>
        <label>Deferred Revenue Account</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>The Description of the Rate Plan Charge.</description>
        <inlineHelpText>The Description of the Rate Plan Charge.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Discount_Apply_Type__c</fullName>
        <label>Discount - Apply Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Discount_Class__c</fullName>
        <description>The class that the discount belongs to. The discount class defines the order in which discount product rate plan charges are applied.</description>
        <label>Discount Class</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Discount_Level__c</fullName>
        <description>Specifies if the discount applies to just the product rate plan, the entire subscription, or to any activity in the account.</description>
        <label>Discount Level</label>
        <picklist>
            <picklistValues>
                <fullName>RatePlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__EndDateCondition__c</fullName>
        <label>End Date Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription End Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific End Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__ProductRatePlan__r.zqu__EntityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__IncludedUnits__c</fullName>
        <description>Specifies the number of units in the base set of units.</description>
        <label>Included Units</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ListPriceBase__c</fullName>
        <description>The list price base for the product rate plan charge.</description>
        <label>List Price Base</label>
        <picklist>
            <picklistValues>
                <fullName>Per Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Billing Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__ListPrice__c</fullName>
        <description>The List Price of the Rate Plan Charge.</description>
        <inlineHelpText>The List Price of the Rate Plan Charge.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__MaxQuantity__c</fullName>
        <description>The Maximum Quantity of the Rate Plan Charge.</description>
        <inlineHelpText>The Maximum Quantity of the Rate Plan Charge.</inlineHelpText>
        <label>Maximum Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__MinQuantity__c</fullName>
        <description>The Minimum Quantity of the Rate Plan Charge.</description>
        <inlineHelpText>The Minimum Quantity of the Rate Plan Charge.</inlineHelpText>
        <label>Minimum Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Model__c</fullName>
        <description>The Model of the Rate Plan Charge.</description>
        <inlineHelpText>The Model of the Rate Plan Charge.</inlineHelpText>
        <label>Model</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered with Overage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount-Fixed Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount-Percentage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__NumberOfPeriod__c</fullName>
        <description>Specifies the number of periods to use when calculating charges in an overage smoothing charge model.</description>
        <label>Number Of Period</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__OverageCalculationOption__c</fullName>
        <description>Determines when to calculate overage charges.</description>
        <label>Overage Calculation Option</label>
        <picklist>
            <picklistValues>
                <fullName>End Of Smoothing Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Billing Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__OverageUnusedUnitsCreditOption__c</fullName>
        <description>Determines whether to credit the customer with unused units of usage.</description>
        <label>Overage Unused Units Credit Option</label>
        <picklist>
            <picklistValues>
                <fullName>No Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit By Specific Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__PrepaymentPeriods__c</fullName>
        <description>The number of Periods that shall be Prepaid.</description>
        <inlineHelpText>The number of Periods that shall be Prepaid.</inlineHelpText>
        <label>Prepaid Periods</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__PriceChangeOption__c</fullName>
        <description>Applies an automatic price change when a termed subscription is renewed.</description>
        <label>Price Change Option</label>
        <picklist>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Latest Product Catalog Pricing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__PriceIncreasePercentage__c</fullName>
        <description>Specifies the percentage to increase or decrease the price of a termed subscription&apos;s renewal. Use this field if you set the PriceChangeOption value to SpecificPercentageValue.</description>
        <label>Price Increase Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__PriceTable__c</fullName>
        <description>zuora rateplan charge price table</description>
        <label>Price Table</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanChargeFullName__c</fullName>
        <description>The full name of the Rate Plan Charge.</description>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanChargeName__c</fullName>
        <description>full of product rate plan charge&apos;s name.</description>
        <label>Product Rate Plan Charge Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlan__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The Rate Plan associated with this Rate Plan Charge.</description>
        <inlineHelpText>The Rate Plan associated with this Rate Plan Charge.</inlineHelpText>
        <label>Product Rate Plan</label>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charges</relationshipLabel>
        <relationshipName>R00N40000001mFVKEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RatingGroup__c</fullName>
        <description>Specifies a rating group based on which usage records are rated.</description>
        <inlineHelpText>Specifies a rating group based on which usage records are rated.</inlineHelpText>
        <label>Rating Group</label>
        <picklist>
            <picklistValues>
                <fullName>ByBillingPeriod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ByUsageStartDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ByUsageRecord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ByUsageUpload</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Recognize_revenue_without_deferral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this flag to true will copy over the value from the Recognized Revenue Account to the Account Code and Deferred
            Revenue Account</description>
        <inlineHelpText>Setting this flag to true will copy over the value from the Recognized Revenue Account to the Account Code and Deferred
            Revenue Account</inlineHelpText>
        <label>Recognize revenue without deferral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__RecognizedRevenueAccount__c</fullName>
        <description>The name of the recognized revenue account for this charge.</description>
        <label>Recognized Revenue Account</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__RecurringPeriod__c</fullName>
        <description>The Recurring Period of the Rate Plan Charge.</description>
        <inlineHelpText>The Recurring Period of the Rate Plan Charge.</inlineHelpText>
        <label>Billing Period</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__RevRecCode2__c</fullName>
        <description>The revenue recognition code for the given charge.  Used for facilitating recognizing revenue within accounting systems or reporting.</description>
        <label>Rev Rec Code</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__RevRecCode__c</fullName>
        <description>The revenue recognition code for the given charge.  Used for facilitating recognizing revenue within accounting systems or reporting.</description>
        <label>Rev Rec Code (Deprecated)</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RevRecTriggerCondition__c</fullName>
        <description>Specifies when revenue recognition begins.</description>
        <label>Rev Rec Trigger Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Effective Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Activation Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Acceptance Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__RevenueRecognitionRuleName__c</fullName>
        <description>Determines when to recognize the revenue for this charge.</description>
        <label>Revenue Recognition Rule Name</label>
        <picklist>
            <picklistValues>
                <fullName>Recognize upon invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recognize daily over time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__SmoothingModel__c</fullName>
        <description>Specifies the smoothing model for an overage smoothing charge model.</description>
        <label>Smoothing Model</label>
        <picklist>
            <picklistValues>
                <fullName>Rolling Window</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollover</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__SpecificBillingPeriod__c</fullName>
        <description>Customize the number of months or weeks for the charge&apos;s billing period. This field is required if you set the value of the Billing Period field to &apos;Specific Months&apos;.</description>
        <label>Specific Billing Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__SyncMessage__c</fullName>
        <description>Message for the Catalog Sync</description>
        <label>Sync Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__SyncStatus__c</fullName>
        <label>Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syncing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__TaxCode2__c</fullName>
        <description>Specifies the tax code for taxation rules. Required when the Taxable field is set to True.</description>
        <label>Tax Code</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__TaxCode__c</fullName>
        <label>Tax Code (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__TaxMode__c</fullName>
        <description>Determines how to define taxation for the charge. Required when the Taxable field is set to True.</description>
        <label>Tax Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Tax Inclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Exclusive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the charge is taxable. When set to True, the TaxMode and TaxCode fields are required when creating or updating th ProductRatePlanCharge object.</description>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__TriggerEvent__c</fullName>
        <description>Specifies when to start billing the customer for the charge.</description>
        <label>Trigger Event</label>
        <picklist>
            <picklistValues>
                <fullName>Upon Contract Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upon Service Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upon Customer Acceptance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Type__c</fullName>
        <description>The Type of the Rate Plan Charge.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__UOM__c</fullName>
        <description>The Unit of Measure for this Rate Plan Charge.</description>
        <inlineHelpText>The Unit of Measure for this Rate Plan Charge.</inlineHelpText>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__UpToPeriodsType__c</fullName>
        <label>Up To Periods Type</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Periods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Upto_How_Many_Periods__c</fullName>
        <description>Determines the period when discount charge model charge is added.</description>
        <label>Up To How Many Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__UsageRecordRatingOption__c</fullName>
        <description>Determines how Zuora processes usage records for per-unit usage charges.</description>
        <label>Usage Record Rating Option</label>
        <picklist>
            <picklistValues>
                <fullName>End Of Billing Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__UseDiscountSpecificAccountingCode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether to define a new accounting code for the new discount charge.</description>
        <label>Use Discount Specific Accounting Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__UseTenantDefaultForPriceChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applies the tenant-level percentage uplift value for an automatic price change to a termed subscription&apos;s renewal.</description>
        <label>Use Tenant Default For Price Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__WeeklyBillCycleDay__c</fullName>
        <description>Specifies which day of the week as the bill cycle day (BCD) for the charge.</description>
        <label>Weekly Bill Cycle Day</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__ZUnitOfMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UOM</label>
        <referenceTo>zqu__ZUnitOfMeasure__c</referenceTo>
        <relationshipLabel>Unit Of Measure</relationshipLabel>
        <relationshipName>ZUnit_Of_Measure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZUom_Id__c</fullName>
        <description>Zuora UOM Id</description>
        <label>Uom Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Zuora Id (external primary key) of this Rate Plan Charge.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Zuora Id (external primary key) of this Rate Plan Charge.</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Rate Plan Charge</label>
    <listViews>
        <fullName>Main</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>zqu__Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>Main</label>
    </listViews>
    <nameField>
        <label>Rate Plan Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plan Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>